manifests/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: grafana-nodes-updates-tls
  name: grafana-nodes-updates
spec:
  ports:
  - name: https
    port: 3000
    protocol: TCP
    targetPort: https
  sessionAffinity: None
  type: ClusterIP
